<resources>
    <string name="app_name">Firebase Push Notifications</string>

    <string name="log_in">Log In</string>
    <string name="username">username</string>
    <string name="send">Send</string>
    <string name="time_placeholder">HH:MM</string>
    <string name="user_name">User Name</string>
    <string name="this_is_a_sample_real_time_message_from_the_data_stream_network">this is a sample real-time message from the data stream network</string>
    <string name="microdoers_chat">MicroDoers Chat</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account"><u>Don\'t have an account?</u></string>
    <string name="register">Register</string>
    <string name="btn_change_username">Change Image</string>
    <string name="txt_user_name">User Name</string>
    <string name="add_profile_image">Add Profile Image</string>
    <string name="profile_image">Profile Image</string>
    <string name="log_out">Log out</string>
    <string name="txt_settings">Settings</string>
    <string name="change_settings">Change Settings</string>
    <string name="change_user_name">Change User Name</string>
    <string name="change_profile_image">Change Profile Image</string>
    <string name="confirm_changes">Confirm Changes</string>
    <string name="text_pick_image_dialog">Go To Gallery</string>
    <string name="placeholder_channels_activity">Placeholder Channels Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_channel_name">New Channel Name</string>
    <string name="enter_channel_password">Enter Channel Password</string>
    <string name="join_channel">Join</string>
    <string name="enter_email">Enter Email</string>
    <string name="join">Join</string>
    <string name="userName">user name</string>
</resources>
